# SysWatch

./: Makefile  README.md  bootstrap-build-env.sh  install.sh  pyproject.toml
proto/: syswatch.proto
syswatch-agent/: pyproject.toml
syswatch-agent/syswatch_agent/: __main__.py  assembler.py  cli.py  config.py  encoder.py  exceptions.py  main.py  sampler.py  streamer.py
syswatch-agent/syswatch_agent/collectors/: __init__.py  base.py  cpu.py  disk.py  hostinfo.py  load.py  network.py  ram.py  services.py
syswatch-agent/syswatch_agent/proto/: __init__.py
syswatch-common/syswatch_common/: __init__.py
syswatch-server/: alembic.ini  pyproject.toml
syswatch-server/data/: grafana_dashboard.json  retention.sql  syswatch-server.service  syswatch.desktop
syswatch-server/frontend/: index.html  package.json  vite.config.js
syswatch-server/frontend/src/: App.jsx  api.js  utils.js
syswatch-server/frontend/src/components/: Sidebar.jsx  StatusDot.jsx
syswatch-server/frontend/src/contexts/: AuthContext.jsx
syswatch-server/frontend/src/pages/: AddAgent.jsx  Agents.jsx  Dashboard.jsx  Login.jsx
syswatch-server/frontend/src/styles/: main.css
syswatch-server/syswatch_server/: __main__.py  cli.py  config.py  config.yaml  exceptions.py  main.py
syswatch-server/syswatch_server/alerts/: __init__.py  alertmanager.py
syswatch-server/syswatch_server/db/: __init__.py  connection.py  queries.py  writer.py
syswatch-server/syswatch_server/grpc/: __init__.py  server.py  servicer.py
syswatch-server/syswatch_server/metrics/: __init__.py  registry.py
syswatch-server/syswatch_server/migrations/: env.py  script.py.mako
syswatch-server/syswatch_server/migrations/versions/: 0001_initial.py
syswatch-server/syswatch_server/observability/: __init__.py  tracing.py
syswatch-server/syswatch_server/pki/: __init__.py  ca.py
syswatch-server/syswatch_server/proto/: __init__.py
syswatch-server/syswatch_server/web/: __init__.py  app.py  auth.py  deps.py
syswatch-server/syswatch_server/web/routes/: api.py
