[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syswatch-server"
version = "0.1.0"
description = "Distributed Linux telemetry server — gRPC ingestion, TimescaleDB, web dashboard"
requires-python = ">=3.13"
dependencies = [
    # gRPC + protobuf (mTLS streaming)
    "grpcio>=1.63.0",
    "protobuf>=5.27.0",
    # Database
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    # Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",   # FastAPI Form() / file uploads
    # Auth
    "pyjwt[crypto]>=2.8.0",      # RS256 JWT (crypto extra pulls in cryptography)
    "passlib[bcrypt]>=1.7.4",    # bcrypt password hashing
    # PKI
    "cryptography>=42.0.0",
    # Alerting
    "httpx>=0.27.0",
    # Metrics
    "prometheus-client>=0.20.0",
    # Observability (OTel → Tempo)
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-asyncpg>=0.46b0",
    # Config
    "pyyaml>=6.0.2",
]

[project.scripts]
# Management CLI: start / stop / status / logs / migrate / health / open
syswatch-server = "syswatch_server.cli:main"
# Daemon: what systemd ExecStart calls
syswatch-server-daemon = "syswatch_server.main:main"

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.63.0",   # proto generation (build-time)
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "types-pyyaml>=6.0.12",
]

# ── Hatchling ─────────────────────────────────────────────────────────────────
# Include the built React frontend (static/) and the proto-generated files
# in the wheel. The frontend is built by `npm run build` (writes to
# syswatch_server/static/) and proto files by `make proto` BEFORE wheel build.
[tool.hatch.build.targets.wheel]
packages = ["syswatch_server"]
# Force-include data files that hatchling's default discovery might skip
# (non-.py files inside the package: templates were removed, but static assets,
# migration .mako, and YAML need explicit inclusion via artifacts).
artifacts = [
    "syswatch_server/static/**",
    "syswatch_server/migrations/**",
    "syswatch_server/config.yaml",
]

[tool.hatch.build.targets.sdist]
# sdist excludes generated artifacts — consumers regenerate them.
exclude = [
    "syswatch_server/proto/syswatch_pb2.py",
    "syswatch_server/proto/syswatch_pb2_grpc.py",
    "syswatch_server/static/assets",
    "syswatch_server/static/index.html",
    "frontend/node_modules",
]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = [
    "syswatch_server.proto.*",
    "grpc.*",
    "asyncpg.*",
    "alembic.*",
    "passlib.*",
    "prometheus_client.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    "syswatch_server/proto/syswatch_pb2*.py",
    "syswatch_server/migrations/versions",
    "frontend",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
